--- a/test/Makefile
+++ b/test/Makefile
@@ -175,7 +175,7 @@ OBJS_gen  = dis_base.o value_formatter.o test_memory.o text_buffer.o cli_listing
 OBJS_mc6809  = table_mc6809.o  reg_mc6809.o
 OBJS_mc6800  = table_mc6800.o  reg_mc6800.o
 OBJS_mos6502 = table_mos6502.o reg_mos6502.o
-OBJS_w65c816 = table_w65c816.o reg_mos6502.o table_mos6502.o
+OBJS_w65c816 = table_w65c816.o reg_w65c816.o
 OBJS_i8080   = table_i8080.o   reg_i8080.o
 OBJS_z80     = table_z80.o     reg_z80.o
 OBJS_z8      = table_z8.o      reg_z8.o
