--- a/test/Makefile
+++ b/test/Makefile
@@ -39,6 +39,7 @@ all: \
 	test_z80.hex \
 	test_z8.hex \
 	test_z86c.hex \
+	test_z88.hex \
 	test_ins8060.hex \
 	test_ins8070.hex \
 	test_cdp1802.hex \
