--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=libasm
-version=0.1
+version=1.4.10
 author=Tadashi G. Takaoka
 maintainer=Tadashi G. Takaoka <tadashi.g.takaoka@gmail.com>
-sentence=assembler/disassembler for popular MPUs
-paragraph=Assembler and Disassembler for MC6809, HD6309, R6502, R65C02, i8080, Z80, TMS9995, MC68000.
+sentence=Assembler/disassembler for retro CPUs
+paragraph=Assembler and Disassembler for 6809, 6811, 6502, 8080, Z80, Z8, 68000 etc.
 category=Other
 url=https://github.com/tgtakaoka/libasm
 architectures=*
