--- a/cli/Makefile
+++ b/cli/Makefile
@@ -25,6 +25,7 @@ OBJS_mc6809   = table_mc6809.o  reg_mc6809.o
 OBJS_mc6800   = table_mc6800.o  reg_mc6800.o
 OBJS_mos6502  = table_mos6502.o reg_mos6502.o
 OBJS_w65c816  = table_w65c816.o reg_w65c816.o
+OBJS_i8051    = table_i8051.o   reg_i8051.o
 OBJS_i8080    = table_i8080.o   reg_i8080.o
 OBJS_z80      = table_z80.o     reg_z80.o
 OBJS_z8       = table_z8.o      reg_z8.o
@@ -78,6 +79,7 @@ dis:    dis.o $(OBJS_dis) $(OBJS_common) \
 	dis_mc6800.o  $(OBJS_mc6800)  \
 	dis_mos6502.o $(OBJS_mos6502) \
 	dis_w65c816.o $(OBJS_w65c816) \
+	dis_i8051.o   $(OBJS_i8051)   \
 	dis_i8080.o   $(OBJS_i8080)   \
 	dis_z80.o     $(OBJS_z80)     \
 	dis_z8.o      $(OBJS_z8)      \
