--- a/cli/Makefile
+++ b/cli/Makefile
@@ -65,6 +65,7 @@ asm:    asm.o $(OBJS_asm) $(OBJS_common) \
 	asm_mc6800.o  $(OBJS_mc6800)  \
 	asm_mos6502.o $(OBJS_mos6502) \
 	asm_w65c816.o $(OBJS_w65c816) \
+	asm_i8051.o   $(OBJS_i8051)   \
 	asm_i8080.o   $(OBJS_i8080)   \
 	asm_z80.o     $(OBJS_z80)     \
 	asm_z8.o      $(OBJS_z8)      \
