--- a/test/Makefile
+++ b/test/Makefile
@@ -143,7 +143,8 @@ test_cdp1802: test_asm_cdp1802 test_dis_cdp1802
 test_mc68000: test_asm_mc68000 test_dis_mc68000
 	./test_asm_mc68000
 	./test_dis_mc68000
-test_z8000: test_dis_z8000
+test_z8000: test_asm_z8000 test_dis_z8000
+	./test_asm_z8000
 	./test_dis_z8000
 test_expr: test_expr_moto test_expr_intel test_expr_base
 	./test_expr_moto
@@ -181,7 +182,7 @@ TEST_OBJS= \
 	test_asm_cdp1802.o test_dis_cdp1802.o \
 	test_asm_tms9900.o test_dis_tms9900.o \
 	test_asm_mc68000.o test_dis_mc68000.o \
-	test_dis_z8000.o \
+	test_asm_z8000.o   test_dis_z8000.o \
 	test_expr_moto.o   test_expr_intel.o  \
 	test_expr_base.o \
 	gen_mc6809.o  \
@@ -233,7 +234,7 @@ OBJS	 = \
 	$(OBJS_cdp1802) asm_cdp1802.o dis_cdp1802.o \
 	$(OBJS_tms9900) asm_tms9900.o dis_tms9900.o \
 	$(OBJS_mc68000) asm_mc68000.o dis_mc68000.o \
-	$(OBJS_z8000)   dis_z8000.o
+	$(OBJS_z8000)   asm_z8000.o   dis_z8000.o
 
 -include $(OBJS:.o=.d) $(TEST_OBJS:.o=.d)
 
@@ -284,6 +285,8 @@ test_dis_tms9900: test_dis_tms9900.o dis_tms9900.o $(OBJS_tms9900) $(OBJS_dis) $
 test_asm_mc68000: test_asm_mc68000.o asm_mc68000.o $(OBJS_mc68000) $(OBJS_asm) $(OBJS_test)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_mc68000: test_dis_mc68000.o dis_mc68000.o $(OBJS_mc68000) $(OBJS_dis) $(OBJS_test)
+	$(CXX) -o $@ $(CXXFLAGS) $^
+test_asm_z8000:   test_asm_z8000.o   asm_z8000.o   $(OBJS_z8000)   $(OBJS_asm) $(OBJS_test)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_z8000:   test_dis_z8000.o   dis_z8000.o   $(OBJS_z8000)   $(OBJS_dis) $(OBJS_test)
 	$(CXX) -o $@ $(CXXFLAGS) $^
