[Z8000/Test] Cleanup Z8001/Z8002 test source

--- a/test/Makefile
+++ b/test/Makefile
@@ -47,9 +47,9 @@ all: \
 	test_tms9900.hex \
 	test_tms9995.hex \
 	test_tms99105.hex \
+	test_mc68000.s28 \
 	test_z8001.hex \
-	test_z8002.hex \
-	test_mc68000.s28
+	test_z8002.hex
 
 %.hex: %.asm
 	asl $(ASL_FLAGS) $^
