[NS32000] Add NS32000 Assembler

--- a/test/Makefile
+++ b/test/Makefile
@@ -150,7 +150,8 @@ test_mc68000: test_asm_mc68000 test_dis_mc68000
 test_z8000: test_asm_z8000 test_dis_z8000
 	./test_asm_z8000
 	./test_dis_z8000
-test_ns32000: test_dis_ns32000
+test_ns32000: test_asm_ns32000 test_dis_ns32000
+	./test_asm_ns32000
 	./test_dis_ns32000
 test_expr: test_expr_moto test_expr_intel test_expr_base
 	./test_expr_moto
@@ -189,7 +190,7 @@ TEST_OBJS= \
 	test_asm_tms9900.o test_dis_tms9900.o \
 	test_asm_mc68000.o test_dis_mc68000.o \
 	test_asm_z8000.o   test_dis_z8000.o   \
-	                   test_dis_ns32000.o \
+	test_asm_ns32000.o test_dis_ns32000.o \
 	test_expr_moto.o   test_expr_intel.o  \
 	test_expr_base.o \
 	gen_mc6809.o  \
@@ -243,7 +244,7 @@ OBJS	 = \
 	$(OBJS_tms9900) asm_tms9900.o dis_tms9900.o \
 	$(OBJS_mc68000) asm_mc68000.o dis_mc68000.o \
 	$(OBJS_z8000)   asm_z8000.o   dis_z8000.o   \
-	$(OBJS_ns32000)               dis_ns23000.o
+	$(OBJS_ns32000) asm_ns32000.o dis_ns23000.o
 
 -include $(OBJS:.o=.d) $(TEST_OBJS:.o=.d)
 
@@ -298,6 +299,8 @@ test_dis_mc68000: test_dis_mc68000.o dis_mc68000.o $(OBJS_mc68000) $(OBJS_dis) $
 test_asm_z8000:   test_asm_z8000.o   asm_z8000.o   $(OBJS_z8000)   $(OBJS_asm) $(OBJS_test)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_z8000:   test_dis_z8000.o   dis_z8000.o   $(OBJS_z8000)   $(OBJS_dis) $(OBJS_test)
+	$(CXX) -o $@ $(CXXFLAGS) $^
+test_asm_ns32000: test_asm_ns32000.o asm_ns32000.o $(OBJS_ns32000) $(OBJS_asm) $(OBJS_test)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_ns32000: test_dis_ns32000.o dis_ns32000.o $(OBJS_ns32000) $(OBJS_dis) $(OBJS_test)
 	$(CXX) -o $@ $(CXXFLAGS) $^
