--- a/cli/Makefile
+++ b/cli/Makefile
@@ -77,6 +77,7 @@ asm:    asm.o $(OBJS_asm) $(OBJS_common) \
 	asm_ins8060.o $(OBJS_ins8060) \
 	asm_ins8070.o $(OBJS_ins8070) \
 	asm_cdp1802.o $(OBJS_cdp1802) \
+	asm_i8086.o   $(OBJS_i8086)   \
 	asm_tms9900.o $(OBJS_tms9900) \
 	asm_mc68000.o $(OBJS_mc68000) \
 	asm_z8000.o   $(OBJS_z8000)   \
