Refactor comment handling
asm cdp1802   11558 (  -38)   359 (  1)
asm i8051     13132 (  -46)   359 (  1)
asm i8080     12288 (  -54)   364 (  1)
asm i8086     16902 (  -46)   360 (  1)
asm ins8060   11628 (  -16)   359 (  1)
asm ins8070   12396 (  -50)   359 (  1)
asm mc6800    14252 (  -86)   364 (  1)
asm mc68000   16368 (  -72)   360 (  1)
asm mc6809    17130 (  -70)   365 (  1)
asm mos6502   14719 (  -22)   369 (  1)
asm ns32000   17983 (  -40)   359 (  1)
asm tms9900   13230 (  -76)   364 (  1)
asm z8        15924 (  -80)   368 (  1)
asm z80       13942 (  -52)   364 (  1)
asm z8000     17680 (  -46)   360 (  1)
dis cdp1802    9812 (    2)   301 (  1)
dis i8051     10858 (    2)   301 (  1)
dis i8080     10085 (    2)   306 (  1)
dis i8086     14373 (    2)   302 (  1)
dis ins8060    9824 (    2)   301 (  1)
dis ins8070   10479 (    2)   302 (  1)
dis mc6800    12704 (    2)   306 (  1)
dis mc68000   14877 (    2)   302 (  1)
dis mc6809    14711 (    2)   306 (  1)
dis mos6502   12891 (    2)   309 (  1)
dis ns32000   15933 (    2)   301 (  1)
dis tms9900   11194 (    2)   306 (  1)
dis z8        14156 (    2)   307 (  1)
dis z80       12242 (    2)   306 (  1)
dis z8000     15640 (    4)   303 (  1)

--- a/test/Makefile
+++ b/test/Makefile
@@ -425,8 +425,8 @@ gen_mc68000: gen_mc68000.o dis_mc68000.o $(OBJS_mc68000) $(OBJS_gen)
 	./gen_mc68000 -u -C 68000 -o gen_mc68000.asm
 gen_z8000:   gen_z8000.o   dis_z8000.o   $(OBJS_z8000)   $(OBJS_gen)
 	$(CXX) -o $@ $(CXXFLAGS) $^
-	./gen_z8000 -C z8001 -o gen_z8001.s
-	./gen_z8000 -C z8002 -o gen_z8002.s
+	./gen_z8000 -C z8001 -c -o gen_z8001.inc
+	./gen_z8000 -C z8002 -c -o gen_z8002.inc
 
 clean: clean-obj
 	-rm -f $(TESTS)
